--- a/styles.css
+++ b/styles.css
@@ -664,7 +664,6 @@ h3 {
 
   header div {
     padding-top: 20px;
-    flex-direction: column;
   }
   header div h1 {
     font-size: 55px;
@@ -678,6 +677,9 @@ h3 {
 
 @media screen and (max-width: 1150px){
  
+  header div {
+    flex-direction: column;
+  }
  
   
   header div h1 {
